HINDI GODWARI DHAM

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
-                <a href="#">Godawari Dham</em></a>
+                <a href="#">गोदावरी धाम /em></a>
             </div>
             <nav>
                 <ul>
