face logo added and text moved outside circule

--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
 
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
-                <a href="#">गोदावरी धाम</a>
+                <a href="#">
+                    <img src="img/photo.jpg"/>
+                </a>
+   <p class="logo-text">गोदावरी धाम</P>
             </div>
+
             <nav>
                 <ul>
                     <li>
