--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
                 <a href="#">
-                    <img src="img/photo.jpg"/>
+                    <img src="img/photo.jpg" width="100%" height="100%" />
                 </a>
    <p class="logo-text">गोदावरी धाम</P>
             </div>
