--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
                 <a href="#">
-                    <img src="img/photo.jpg" width="100%" height="100%" />
+                    <img src="img/photo.jpg" />
                 </a>
    <p class="logo-text">गोदावरी धाम</P>
             </div>
@@ -356,7 +356,8 @@
                                 <div class="bt-play">Play</div>
                             </div>
                             <div class="video-container">
-                                <iframe width="100%" height="520" src="https://www.youtube.com/" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+                           
+                                <iframe src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FGodawariDham%2Fvideos%2F851898732013518%2F&show_text=true" width="100%" height="520" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
                             </div>
                         </div>
                     </div>
@@ -576,7 +577,7 @@
                            3. Click "Share" and choose "Embed map" tab
                            4. Copy only URL and paste it within the src="" field below
                     -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d451.41455987613483!2d75.82174411407267!3d25.15878956249329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7745dc78218e7907!2sGodawari%20dham%20temple!5e0!3m2!1sen!2sin!4v1601807762642!5m2!1sen!2sin" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1197183.8373802372!2d-1.9415093691103689!3d6.781986417238027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb96f349e85efd%3A0xb8d1e0b88af1f0f5!2sKumasi+Central+Market!5e0!3m2!1sen!2sth!4v1532967884907" width="100%" height="400px" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <div id="contact-content">
                     <div class="section-heading">
