--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!--/.navbar-header-->
             <div id="main-nav" class="collapse navbar-collapse">
                 <nav>
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav" data-toggle="collapse" data-target="#main-nav">
                         <li><a href="#top">Home</a></li>
                         <li><a href="#featured">About Temple</a></li>
                         <li><a href="#projects">Darshan Gallery</a></li>
